5.ingress/app-rules/joeburger-customer-ingress.yaml
apiVersion : extensions/v1beta1
kind: Ingress
metadata:
  name: joeburger-customer-routing
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: customer-auth
    nginx.ingress.kubernetes.io/auth-realm: "Joe Burger Customer"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: services.joeburger.com.au
      http:
         paths:
           - path: /cs(/|$)(.*)
             backend:
               serviceName: joeburger-customer
               servicePort: 8081
