5.ingress/app-rules/joeburger-grafana-ingress.yaml
apiVersion : extensions/v1beta1
kind: Ingress
metadata:
  name: joeburger-grafana-routing
  annotations:
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
      nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: granfana.joeburger.com.au
      http:
         paths:
           - path: /grafana(/|$)(.*)
             backend:
               serviceName: prometheus-grafana
               servicePort: 80
