5.ingress/app-rules/joeburger-invoices-ingress.yaml
apiVersion : extensions/v1beta1
kind: Ingress
metadata:
  name: joeburger-orders-routing
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: invoices-auth
    nginx.ingress.kubernetes.io/auth-realm: "Joe Burger Orders"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: services.joeburger.com.au
      http:
         paths:
           - path: /or(/|$)(.*)
             backend:
               serviceName: joeburger-orders
               servicePort: 8081
