5.ingress/app-rules/joeburger-orders-ingress.yaml
apiVersion : extensions/v1beta1
kind: Ingress
metadata:
  name: joeburger-invoices-routing
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: orders-auth
    nginx.ingress.kubernetes.io/auth-realm: "Joe Burger Invoices"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: services.joeburger.com.au
      http:
         paths:
           - path: /in(/|$)(.*)
             backend:
               serviceName: joeburger-invoices
               servicePort: 8081
