5.ingress/app-rules/joeburger-products-ingress.yaml
apiVersion : extensions/v1beta1
kind: Ingress
metadata:
  name: joeburger-products-routing
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: products-auth
    nginx.ingress.kubernetes.io/auth-realm: "Joe Burger Products"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: services.joeburger.com.au
      http:
         paths:
           - path: /pr(/|$)(.*)
             backend:
               serviceName: joeburger-products
               servicePort: 8081
